--- a/header.html
+++ b/header.html
@@ -1,13 +1,14 @@
 <title>DiagrammeR</title>
 
 <link rel="stylesheet" type="text/css" href="./lib/fullPage.js/jquery.fullPage.css" />
+<link rel="stylesheet" type="text/css" href="./lib/style.css" />
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- This following line is needed only in case of using other easing effect rather than "linear", "swing" or "easeInQuart". You can also add the full jQuery UI instead of this file if you prefer -->
-<script src="vendors/jquery.easings.min.js"></script>
+<script src="./lib/fullPage.js/vendors/jquery.easings.min.js"></script>
 
 <!-- This following line needed in the case of using the plugin option `scrollOverflow:true` -->
 <script type="text/javascript" src="./lib/fullPage.js/vendors/jquery.slimscroll.min.js"></script>
 
-<script type="text/javascript" src="./lib/fullPage.js/jquery.fullPage.js"></script>
+<script type="text/javascript" src="./lib/fullPage.js/jquery.fullPage.min.js"></script>
