--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>The DiagrammeR Package — R + JS + RStudio + htmlwidgets</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -34,8 +34,10 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <h4>Diagrams made easy.</h4>
+        <p>The DiagrammeR package allows you to create diagrams and flowcharts using R and RStudio.
+        Text is used to describe the diagram. By doing this in R, it's possible to integrate R code 
+        and generate a powerful workflow for all manner of diagrams.</p>
       </div>
     </div>
   </div>
