Modify text slightly

--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>There's
-                                    <br>Much More
-                                    <br>To Come!</h4>
+                                <h4>Much
+                                    <br>More!
+                                </h4>
                             </div>
                         </li>
                     </ul>
