--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Features of the Package</h2>
+                    <h2 class="section-heading">The R Package Known As DiagrammeR</h2>
                     <h3 class="section-subheading text-muted">DiagrammeR allows you to generate flowchart diagrams using text in a Markdown-like syntax. The package leverages the power of <strong>htmlwidgets</strong> to bind <strong>JavaScript</strong> with <strong>R</strong>. This intertwining of the <strong>R + JS</strong> can allow us to do a lot of really great things.</h3>
                 </div>
             </div>
