Add video section with video embed

--- a/index.html
+++ b/index.html
@@ -121,6 +121,26 @@
         </div>
     </section>
 
+    <!-- Video Section -->
+    <section id="video">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Demonstration Video</h2>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <div class="videoUiWrapper thumbnail">
+                                <video width="70%" class="embed-responsive-item" controls id="video" poster="img/video.png">
+                                    <source src=mov/DiagrammeR.mp4 type=video/mp4>
+                                </video>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Examples Section -->
 <!--     <section id="examples" class="bg-light-gray">
         <div class="container">
