Modify text in page

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <li>
                         <a class="page-scroll" href="#features">Features</a>
                     </li>
-<!--                <li>
-                        <a class="page-scroll" href="#examples">Examples</a>
-                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="#video">Video</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#versions">Versions</a>
                     </li>
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">The R Package Known As DiagrammeR</h2>
-                    <h3 class="section-subheading text-muted">DiagrammeR allows you to generate flowchart diagrams using text in a Markdown-like syntax. The package leverages the power of <strong>htmlwidgets</strong> to bind <strong>JavaScript</strong> with <strong>R</strong>. This intertwining of the <strong>R + JS</strong> can allow us to do a lot of really great things.</h3>
+                    <h3 class="section-subheading text-muted"><br><br><strong>R</strong> + <strong>htmlwidgets</strong> + <strong>JavaScript</strong> + <strong>viz.js</strong> + <strong>mermaid.js</strong><br /><br />Generate flowchart diagrams using text in a Markdown-like syntax.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -99,7 +99,7 @@
                         <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Simple (Yet Powerful) Syntax</h4>
-                    <p class="text-muted">The syntax (either mermaid or Graphviz DOT) is easy to pick up. Templating features allow for easy integration with R code.</p>
+                    <p class="text-muted">Easy-to-learn syntax. Templating features for integration with R code.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -107,7 +107,7 @@
                         <i class="fa fa-play fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Syntax Coloring and Previewing</h4>
-                    <p class="text-muted">While editing mermaid (.mmd) files or Graphviz (.gv) files inside RStudio, get helpful syntax coloring and easily preview results.</p>
+                    <p class="text-muted">Directly edit mermaid (<strong>.mmd</strong>) or Graphviz (<strong>.gv</strong>) files inside <strong>RStudio</strong> with syntax coloring. Preview easily.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -115,7 +115,7 @@
                         <i class="fa fa-eye fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Scalable Vector Graphics</h4>
-                    <p class="text-muted">Beautiful output. Diagram elements such as nodes and edges are highly customizable, and, they are rendered as SVG graphics.</p>
+                    <p class="text-muted">Output looks great as SVG. Diagram elements such as nodes and edges won't lose visual clarity.</p>
                 </div>
             </div>
         </div>
