Remove class from video tag

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <div class="videoUiWrapper thumbnail">
-                                <video width="70%" class="embed-responsive-item" controls id="video" poster="img/video.png">
+                                <video width="70%" controls id="video" poster="img/video.png">
                                     <source src=mov/DiagrammeR.mp4 type=video/mp4>
                                 </video>
                                 </div>
