--- a/index.html
+++ b/index.html
@@ -181,11 +181,10 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/0_1.png" alt="">
+                                <img class="img-circle img-responsive" src="img/0_1.png" alt="0.1">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>0.1</h4>
                                     <h4 class="subheading">The First Release</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -195,11 +194,10 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/0_2.png" alt="">
+                                <img class="img-circle img-responsive" src="img/0_2.png" alt="0.2">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>0.2</h4>
                                     <h4 class="subheading">Graphviz is added</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -209,11 +207,10 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/0_3.png" alt="">
+                                <img class="img-circle img-responsive" src="img/0_3.png" alt="0.3">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>0.3</h4>
                                     <h4 class="subheading">More Graphviz Engines</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -223,11 +220,10 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/0_4.png" alt="">
+                                <img class="img-circle img-responsive" src="img/0_4.png" alt="0.4">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>0.4</h4>
                                     <h4 class="subheading">Templating for Graphviz</h4>
                                 </div>
                                 <div class="timeline-body">
