Modify text in page

--- a/index.html
+++ b/index.html
@@ -233,9 +233,8 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Much
-                                    <br>More!
-                                </h4>
+                                <h4><br>
+                                <strong>...</strong></h4>
                             </div>
                         </li>
                     </ul>
