Load 'jquery.video-ui.js'

--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
+    <script src="js/jquery.video-ui.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
