Add jQuery statement for video options

--- a/index.html
+++ b/index.html
@@ -456,6 +456,14 @@
       }(document, "script", "twitter-wjs"));
     </script>
 
+    <script>
+    $('#video').videoUI({
+      'autoHide':false,
+      'volumeMedia': 1,
+      'fullscreenMedia':true,
+      'autoPlay':true
+    });
+    </script>
 
 </body>
 </html>
