Update text in "docs.html"

--- a/docs.html
+++ b/docs.html
@@ -57,10 +57,10 @@
 
     <!-- Docs page layout -->
     <div class="bs-docs-header" id="content">
-      <div class="container">
-        <h1>DiagrammeR Docs</h1>
-        <p>Get an overview of DiagrammeR, learn the syntax, check out some examples.</p>
-      </div>
+        <div class="container">
+            <h1>DiagrammeR Docs</h1>
+            <p>Get an overview of DiagrammeR, learn the syntax, check out some examples.</p>
+        </div>
     </div>
 
     <div class="container bs-docs-container">
@@ -68,7 +68,7 @@
             <div class="col-md-12" role="main">
                 <div class="bs-docs-section">
                     <h1 id="getting-started" class="page-header">Getting Started</h1>
-                    <p class="lead">DiagrammeR (currently v0.4) can be installed as an R package in one of two ways: through GitHub using the devtools package, or, through CRAN.</p>
+                    <p class="lead">DiagrammeR can be installed as an R package in one of two ways: through GitHub using the devtools package, or, through CRAN.</p>
                     <div class="row bs-downloads">
                         <div class="col-sm-6">
                             <h3>GitHub</h3>
@@ -84,8 +84,64 @@
                         </div>
                     </div>
                 </div>
+                <div class="bs-docs-section">
+                    <h1 id="version-history" class="page-header">Version History</h1>
+                    <ul class="media-list">
+                        <li class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object" src="img/0_1.png" alt="0.1" width="100">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Version 0.1</h4>
+                                <p>&middot; initial release<br /> &middot; incorporated into the <strong>htmlwidgets</strong> framework<br />&middot; added basic <strong>shiny</strong> app</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="media-list">
+                        <li class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object" src="img/0_2.png" alt="0.2" width="100">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Version 0.2</h4>
+                                <p>&middot; added the <strong>viz.js</strong> library to enable <strong>Graphviz</strong> support</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="media-list">
+                        <li class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object" src="img/0_3.png" alt="0.3" width="100">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Version 0.3</h4>
+                                <p>&middot; added support for the <strong>Graphviz</strong> <strong>neato</strong>, <strong>twopi</strong>, and <strong>circo</strong> engines</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="media-list">
+                        <li class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object" src="img/0_4.png" alt="0.4" width="100">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Version 0.4</h4>
+                                <p>&middot; added support for substitution in <strong>Graphviz</strong> graph specifications<br />&middot; added support for <strong>Graphviz</strong> diagrams in the <strong>shiny</strong> app</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
+    </div>
 
 <footer class="bs-docs-footer" role="contentinfo">
     <div class="container">
