Update html files

--- a/docs.html
+++ b/docs.html
@@ -68,16 +68,54 @@
             <div class="col-md-12" role="main">
                 <div class="bs-docs-section">
                     <h1 id="getting-started" class="page-header">Getting Started</h1>
-                    <p class="lead">DiagrammeR can be installed as an R package in one of two ways: through GitHub using the devtools package, or, through CRAN.</p>
+                    <p class="lead"></p>
+                    <h2 id="install-of-r-and-rstudio">Install of R and RStudio</h2>
+                    <p>DiagrammeR is used in an <strong>R</strong> environment. If you don't have an <strong>R</strong> installation, it can be obtained from the <strong>R</strong> website. It is recommended that an IDE be used and the best one is undoubtedly <strong>RStudio</strong>. Currently, the Preview Release of <strong>RStudio</strong> is recommended for use with <strong>DiagrammeR</strong> as it has support for external <strong>DiagrammeR</strong> files and syntax coloring</p>
+                    <div class="row bs-downloads">
+                        <div class="col-sm-6">
+                        <h3>R</h3>
+                            <ul class="media-list">
+                                <li class="media">
+                                    <div class="media-left">
+                                        <a href="#">
+                                            <img class="media-object" src="img/r_project.png" alt="R Project" width="100">
+                                        </a>
+                                    </div>
+                                    <div class="media-body">
+                                        <p><a href="http://cran.rstudio.com">Download latest release (v3.1.2)</a></p>
+                                        <p><strong>R</strong> is a free software environment for statistical computing and graphics. It compiles and runs on a wide variety of <strong>UNIX</strong> platforms, <strong>Mac OS X</strong>, and <strong>Windows</strong>.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                        <h3>RStudio</h3>
+                            <ul class="media-list">
+                                <li class="media">
+                                    <div class="media-left">
+                                        <a href="#">
+                                            <img class="media-object" src="img/rstudio.png" alt="RStudio" width="100">
+                                        </a>
+                                    </div>
+                                    <div class="media-body">
+                                        <p><a href="http://www.rstudio.com/products/rstudio/download/preview/">Download Preview Release (RStudio v0.99.233 Preview)</a></p>
+                                        <p><strong>RStudio</strong> is an IDE that provides a great set of tools for working in <strong>R</strong>. You get a code editor, a console, and customizable panes for package management, navigating local files, source control, and more.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h2 id="install-of-digrammer">Install of DiagrammeR</h2>
+                    <p>The <strong>DiagrammeR</strong> package can be installed as an <strong>R</strong> package in one of two ways: through <strong>GitHub</strong> using the devtools package, or, through <strong>CRAN</strong>.</p>
                     <div class="row bs-downloads">
                         <div class="col-sm-6">
                             <h3>GitHub</h3>
-                            <p>This is the version in development. It's the most up-to-date version, certainly, but it may not be as stable as the CRAN version.</p>
+                            <p>This is the version in development. It's the most up-to-date version, certainly, but it may not be as stable as the <strong>CRAN</strong> version.</p>
                             <div><pre><code class="prettyprint">install_github('rich-iannone/DiagrammeR')</code></pre></div>
                         </div>
                         <div class="col-sm-6">
                             <h3>CRAN</h3>
-                            <p>The stable release. While this is likely to be more stable than GitHub version, CRAN releases are far less frequent.</p>
+                            <p>The stable release. While this is likely to be more stable than <strong>GitHub</strong> version, <strong>CRAN</strong> releases are far less frequent.</p>
                             <div>
                                 <pre><code class="prettyprint">install.packages('DiagrammeR')</code></pre>
                             </div>
@@ -163,7 +201,8 @@
     </div>
 
     <div class="container">
-        <p>Designed and built by <a href="https://twitter.com/riannone" target="_blank">@riannone.</a></p>
+        <p>Designed and built by Richard Iannone <a href="https://twitter.com/riannone" target="_blank">@riannone</a>.</p>
+        <p>Valuable contributions by Kent Russell <a href="https://twitter.com/timelyportfolio" target="_blank">@timelyportfolio</a>, JJ Allaire <a href="https://twitter.com/rstudio" target="_blank">@rstudio</a>, and Michaël Benesty <a href="https://twitter.com/pommedeterre33" target="_blank">@pommedeterre33</a>.</p>
         <p>Code licensed under MIT.</p>
         <ul class="bs-docs-footer-links text-muted">
             <li>Currently v0.4</li>
