Update html files

--- a/docs.html
+++ b/docs.html
@@ -70,7 +70,7 @@
                     <h1 id="getting-started" class="page-header">Getting Started</h1>
                     <p class="lead"></p>
                     <h2 id="install-of-r-and-rstudio">Install of R and RStudio</h2>
-                    <p>DiagrammeR is used in an <strong>R</strong> environment. If you don't have an <strong>R</strong> installation, it can be obtained from the <strong>R</strong> website. It is recommended that an IDE be used and the best one is undoubtedly <strong>RStudio</strong>. Currently, the Preview Release of <strong>RStudio</strong> is recommended for use with <strong>DiagrammeR</strong> as it has support for external <strong>DiagrammeR</strong> files and syntax coloring</p>
+                    <p><strong>DiagrammeR</strong> is used in an <strong>R</strong> environment. If you don't have an <strong>R</strong> installation, it can be obtained from the <strong>R</strong> website. It is recommended that an IDE be used and the best one is undoubtedly <strong>RStudio</strong>. Currently, the Preview Release of <strong>RStudio</strong> is recommended for use with <strong>DiagrammeR</strong> as it has support for external <strong>DiagrammeR</strong> files and syntax coloring</p>
                     <div class="row bs-downloads">
                         <div class="col-sm-6">
                         <h3>R</h3>
