Update html files

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">The R Package Known As DiagrammeR</h2>
-                    <h3 class="section-subheading text-muted"><br><br><strong>R</strong> + <strong>htmlwidgets</strong> + <strong>JavaScript</strong> + <strong>viz.js</strong> + <strong>mermaid.js</strong><br /><br />Generate flowchart diagrams using text in a Markdown-like syntax.</h3>
+                    <h3 class="section-subheading text-muted"><br><br><strong>R</strong> + <strong>RStudio</strong> + <strong>htmlwidgets</strong> + <strong>JavaScript</strong> + <strong>d3.js</strong> + <strong>viz.js</strong> + <strong>mermaid.js</strong><br /><br />Generate flowchart diagrams using text in a Markdown-like syntax.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -99,7 +99,7 @@
                         <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Simple (Yet Powerful) Syntax</h4>
-                    <p class="text-muted">Easy-to-learn syntax. Templating features for integration with R code.</p>
+                    <p class="text-muted">Easy-to-learn syntax. Templating features for integration with <strong>R</strong> code.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -107,7 +107,7 @@
                         <i class="fa fa-play fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Syntax Coloring and Previewing</h4>
-                    <p class="text-muted">Directly edit mermaid (<strong>.mmd</strong>) or Graphviz (<strong>.gv</strong>) files inside <strong>RStudio</strong> with syntax coloring. Preview easily.</p>
+                    <p class="text-muted">Directly edit <strong>mermaid</strong> (<strong>.mmd</strong>) or <strong>Graphviz</strong> (<strong>.gv</strong>) files inside <strong>RStudio</strong> with syntax coloring. Preview easily.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -115,7 +115,7 @@
                         <i class="fa fa-eye fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Scalable Vector Graphics</h4>
-                    <p class="text-muted">Output looks great as SVG. Diagram elements such as nodes and edges won't lose visual clarity.</p>
+                    <p class="text-muted">Output looks great as <strong>SVG</strong>. Diagram elements such as nodes and edges won't lose visual clarity.</p>
                 </div>
             </div>
         </div>
@@ -201,7 +201,7 @@
                                     <h4 class="subheading">Graphviz is added</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><strong>Graphviz</strong> has quite the legacy for creating quality graphs. Now it's in <strong>DiagrammeR</strong>. Create graph specifications in the DOT language and take advantage of mixing <strong>R</strong> into it.</p>
+                                    <p class="text-muted"><strong>Graphviz</strong> has quite the legacy for creating quality graphs. Now it's in <strong>DiagrammeR</strong>. Create graph specifications in the <strong>DOT</strong> language and take advantage of mixing <strong>R</strong> into it.</p>
                                 </div>
                             </div>
                         </li>
@@ -227,7 +227,7 @@
                                     <h4 class="subheading">Templating for Graphviz</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">An easier way to inject some <strong>R</strong> into your Graphviz graph specification. The <strong>@@</strong> marks the spot for an evaluated <strong>R</strong> expression residing in the footnotes section.</p>
+                                    <p class="text-muted">An easier way to inject some <strong>R</strong> into your <strong>Graphviz</strong> graph specification. The <strong>@@</strong> marks the spot for an evaluated <strong>R</strong> expression residing in the footnotes section.</p>
                                 </div>
                             </div>
                         </li>
@@ -420,10 +420,18 @@
 
 <footer>
     <div class="container">
-        <p>Designed and built by <a href="https://twitter.com/riannone" target="_blank">@riannone.</a></p>
+        <p>Designed and built by Richard Iannone <a href="https://twitter.com/riannone" target="_blank">@riannone</a>.</p>
+        <p>Valuable contributions by Kent Russell <a href="https://twitter.com/timelyportfolio" target="_blank">@timelyportfolio</a>, JJ Allaire <a href="https://twitter.com/rstudio" target="_blank">@rstudio</a>, and Michaël Benesty <a href="https://twitter.com/pommedeterre33" target="_blank">@pommedeterre33</a>.</p>
         <p>Code licensed under MIT.</p>
-        <p>Currently v0.4 &middot; <a href="https://github.com/rich-iannone/DiagrammeR">GitHub</a> &middot; <a href="https://github.com/rich-iannone/DiagrammeR/issues">Issues</a> &middot;</li> <a href="https://github.com/rich-iannone/DiagrammeR/releases">Releases</a></p>
-        <p></p>
+        <ul class="bs-docs-footer-links text-muted">
+            <li>Currently v0.4</li>
+            <li>&middot;</li>
+            <li><a href="https://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
+            <li>&middot;</li>
+            <li><a href="https://github.com/rich-iannone/DiagrammeR/issues">Issues</a></li>
+            <li>&middot;</li>
+            <li><a href="https://github.com/rich-iannone/DiagrammeR/releases">Releases</a></li>
+        </ul>
     </div>
 </footer>
 
