--- a/docs.html
+++ b/docs.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="bs-docs-section">
-                    <h1 id="version-history" class="page-header">Version History</h1>
+                    <h1 id="version-history" class="page-header">DiagrammeR Version History</h1>
                     <ul class="media-list">
                         <li class="media">
                             <div class="media-left">
